Node_Package/Node_lg_groundtruth_data_ws/lg_groundtruth_data_ws/log/build_2021-01-11_16-57-11/lg_sub_groundtruth/stdout_stderr.log
running egg_info
writing ../../build/lg_sub_groundtruth/lg_sub_groundtruth.egg-info/PKG-INFO
writing dependency_links to ../../build/lg_sub_groundtruth/lg_sub_groundtruth.egg-info/dependency_links.txt
writing entry points to ../../build/lg_sub_groundtruth/lg_sub_groundtruth.egg-info/entry_points.txt
writing requirements to ../../build/lg_sub_groundtruth/lg_sub_groundtruth.egg-info/requires.txt
writing top-level names to ../../build/lg_sub_groundtruth/lg_sub_groundtruth.egg-info/top_level.txt
reading manifest file '../../build/lg_sub_groundtruth/lg_sub_groundtruth.egg-info/SOURCES.txt'
writing manifest file '../../build/lg_sub_groundtruth/lg_sub_groundtruth.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth/lg_gt3d_subscriber.py to lg_gt3d_subscriber.cpython-36.pyc
  File "/home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth/lg_gt3d_subscriber.py", line 140
    '''----------------------------------------------------------  
  def polygon_clip(subjectPolygon, clipPolygon):
   """ Clip a polygon with another polygon.
   Ref: https://rosettacode.org/wiki/Sutherland-Hodgman_polygon_clipping#Python
   Args:
     subjectPolygon: a list of (x,y) 2d points, any polygon.
     clipPolygon: a list of (x,y) 2d points, has to be *convex*
   Note:
     **points have to be counter-clockwise ordered**
   Return:
     a list of (x,y) vertex point for the intersection polygon."""

      def inside(p):
          return(cp2[0]-cp1[0])*(p[1]-cp1[1]) > (cp2[1]-cp1[1])*(p[0]-cp1[0])

      def computeIntersection():
          dc = [ cp1[0] - cp2[0], cp1[1] - cp2[1] ]
          dp = [ s[0] - e[0], s[1] - e[1] ]
          n1 = cp1[0] * cp2[1] - cp1[1] * cp2[0]
          n2 = s[0] * e[1] - s[1] * e[0] 
          n3 = 1.0 / (dc[0] * dp[1] - dc[1] * dp[0])
          return [(n1*dp[0] - n2*dc[0]) * n3, (n1*dp[1] - n2*dc[1]) * n3]

      outputList = subjectPolygon
      cp1 = clipPolygon[-1]

      for clipVertex in clipPolygon:
         cp2 = clipVertex
         inputList = outputList
         outputList = []
         s = inputList[-1]
 
         for subjectVertex in inputList:
            e = subjectVertex
            if inside(e):
               if not inside(s):
                  outputList.append(computeIntersection())
               outputList.append(e)
            elif inside(s):
               outputList.append(computeIntersection())
            s = e
         cp1 = cp2
         if len(outputList) == 0:
             return None
      return(outputList)

  def poly_area(x,y):
    """ Ref: http://stackoverflow.com/questions/24467972/calculate-area-of-polygon-given-x-y-coordinates """
      return 0.5*np.abs(np.dot(x,np.roll(y,1))-np.dot(y,np.roll(x,1)))

  def convex_hull_intersection(p1, p2):
    """ Compute area of two convex hull's intersection area.
        p1,p2 are a list of (x,y) tuples of hull vertices.
        return a list of (x,y) for the intersection and its volume
    """
      inter_p = polygon_clip(p1,p2)
      if inter_p is not None:
          hull_inter = ConvexHull(inter_p)
          return inter_p, hull_inter.volume
      else:
          return None, 0.0  

  def box3d_vol(corners):
       ''' corners: (8,3) no assumption on axis direction '''
                                                                   
                                                
                                           
                                                                               
        
                                                            
running install_data
running install_egg_info
removing '/home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth-0.0.0-py3.6.egg-info' (and everything under it)
Copying ../../build/lg_sub_groundtruth/lg_sub_groundtruth.egg-info to /home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth-0.0.0-py3.6.egg-info
running install_scripts
                                                               
Installing lg_gt3d_subscriber script to /home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/lg_sub_groundtruth
writing list of installed files to '/home/acclivis_linux2/script/lg_groundtruth_data_ws/build/lg_sub_groundtruth/install.log'
        
                                                    
          
                                                                  

                    
                                                                             

                                
                                                   
                                           
                                                
                                         
                                                    
                                                                         

                                 
                           

                                    
                         
                               
                        
                          
 
                                        
                             
                         
                                
                                                          
                                   
                           
                                                       
                 
                  
                                 
                        
                        

                     
                                                                                                            
                                                                      

                                       
                                                            
                                                          
                                                                  
       
                                   
                             
                                          
                                           
           
                            

                         
                 ^
SyntaxError: invalid syntax

